# timespentapp

./: Cargo.toml  cargo.toml
fake/: .gitignore
taurikit/: TODO.md  package-lock.json  package.json
taurikit/src-tauri/: Cargo.toml  tauri.conf.json
taurikit/src-tauri/src/: main.rs
taurikit/src/lib/: ActivityButton.svelte  App.svelte  Camembert.svelte  ECharts.svelte  ELine.svelte  EPie.svelte  EStacked.svelte  Filter.svelte  Graph.svelte  Lines.svelte  RangeSlider.svelte  Scales.svelte  commands.ts  display.ts  stores.ts  stringToColor.ts
timespent/: .rustfmt.toml  Cargo.toml
timespent-tauri/: TODO.md  package-lock.json  package.json
timespent-tauri/public/: global.css  index.html
timespent-tauri/src/: Action.svelte  Activities.svelte  ActivityButton.svelte  ActivityLine.svelte  Aggregates.svelte  All.svelte  App.svelte  Camembert.svelte  Daily.svelte  Filter.svelte  Graph.svelte  Lines.svelte  Project.svelte  Scales.svelte  Slider.svelte  commands.ts  main.ts  stores.ts  stringToColor.ts
timespent-tauri/src-tauri/: Cargo.toml  tauri.conf.json
timespent-taurikit/: TODO.md  package-lock.json  package.json
timespent-taurikit/src-tauri/: Cargo.toml  tauri.conf.json
timespent/benches/: graph_x_segments.rs  graph_y_activities.rs  load_from_gen.rs
timespent/bindings/: Action.ts  Activities.ts  ActivitiesAggregate.ts  Activity.ts  Aggregates.ts  AllAggregate.ts  DailyAggregate.ts  Filter.ts  Graph.ts  Scale.ts  ScaleXSegments.ts  Type.ts  XSegment.ts  YActivities.ts
timespent/src/: activity.rs  aggregates.rs  filter.rs  lib.rs  loader.rs  parser.rs
timespent/src/graph/: mod.rs  scale.rs  ui.rs  x_segments.rs  y_activities.rs
timespent/tests/: tests.rs
timespent/tests/days/: 2022.05.27.txt  2022.05.30.txt
(+11 files in other folders)
