[package]
name = "timespent"
description = "timespent parses a folder containing activities split into days"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["timespent", "work", "categories"]
categories = ["working-tools"]

[[bin]]
name = "fakegen"
path = "src/bin/fakegen.rs"

[lib]
name = "timespent"
path = "src/lib.rs"


[dev-dependencies]
criterion = {version = "^0.4", features = ["html_reports"]}
pprof = { version = "^0.11", features = ["criterion", "flamegraph"] }

[dependencies]
nom = "^7"
chrono = { version = "^0.4", features = ["serde"] }
eyre = "^0.6"
serde = { version = "^1", features = ["derive"] }
ts-rs = { version = "^6", features = ["serde-compat", "chrono-impl"] }
rand = "0.8.5"

[[bench]]
name = "graph_x_segments"
harness = false

[[bench]]
name = "graph_y_activities"
harness = false

[[bench]]
name = "load_from_gen"
harness = false